[gd_scene load_steps=5 format=3 uid="uid://dg0xnnsw0rtph"]

[ext_resource type="Script" uid="uid://cxdw2i7xb5kvr" path="res://Scripts/combat.gd" id="1_fpo0w"]
[ext_resource type="PackedScene" uid="uid://x5njiwmdt4me" path="res://Scenes/Player_combat.tscn" id="2_gelq6"]
[ext_resource type="Texture2D" uid="uid://ce7sjmrdmoifv" path="res://assets/basic_battle_background.png" id="2_rm86t"]
[ext_resource type="PackedScene" uid="uid://c6ci28fm44j7o" path="res://Scenes/Bat.tscn" id="3_fpo0w"]

[node name="Combat" type="Node2D"]
position = Vector2(188, 159)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_fpo0w")

[node name="Background" type="TextureRect" parent="."]
offset_left = -127.333
offset_top = -104.0
offset_right = 642.667
offset_bottom = 329.0
texture = ExtResource("2_rm86t")
expand_mode = 1

[node name="PlayerHealth" type="Label" parent="."]
offset_left = 42.0
offset_top = 71.0
offset_right = 182.0
offset_bottom = 94.0
text = "Player Health: 100"

[node name="EnemyHealth" type="Label" parent="."]
offset_left = 321.0
offset_top = 69.0
offset_right = 456.0
offset_bottom = 92.0
text = "Enemy Health: 30"

[node name="AttackButton" type="Button" parent="."]
offset_left = 132.0
offset_top = 210.0
offset_right = 190.0
offset_bottom = 241.0
text = "Attack"

[node name="DefendButton" type="Button" parent="."]
offset_left = 209.0
offset_top = 210.0
offset_right = 274.0
offset_bottom = 241.0
text = "Defend"

[node name="RunButton" type="Button" parent="."]
offset_left = 291.0
offset_top = 210.0
offset_right = 359.0
offset_bottom = 241.0
text = "Run
"

[node name="CombatLog" type="Label" parent="."]
offset_left = 44.0
offset_top = 5.0
offset_right = 455.0
offset_bottom = 28.0
text = "Combat Begins"
horizontal_alignment = 1

[node name="PlayerCombat" parent="." instance=ExtResource("2_gelq6")]
position = Vector2(112, 147)
scale = Vector2(5, 5)

[node name="Enemy" parent="." instance=ExtResource("3_fpo0w")]
position = Vector2(382, 137)
scale = Vector2(5, 5)
